test/test1output.txt
Welcome to the Geth JavaScript console!

instance: Geth/v1.6.0-unstable-f3579f64/darwin/go1.8
coinbase: 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e
at block: 71 (Mon, 10 Apr 2017 09:42:58 AEST)
 datadir: /Users/bok/Projects/BokkyPooBahsEtherRefundablePrize/test/testchain
 modules: admin:1.0 debug:1.0 eth:1.0 miner:1.0 net:1.0 personal:1.0 rpc:1.0 txpool:1.0 web3:1.0

> 
true
> 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100370.000000000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c   100000.000000000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
> 
undefined
> 
true
> 
undefined
> 
> 
Error: solc: empty source string
    at web3.js:3104:20
    at web3.js:6191:15
    at web3.js:5004:36
    at <anonymous>:1:20

> 
----------v barfCompiled v----------
undefined
> 
undefined
> 
----------^ barfCompiled ^----------
undefined
> 
TypeError: Cannot access member '<stdin>:BokkyPooBahsAutonomousRefundathonFacility' of undefined
    at <anonymous>:1:48

> 
> 
undefined
> 
undefined
> 
RESULT: Test 1.1 Deploy BARF Contract
undefined
> 
undefined
> 
TypeError: Cannot access member '<stdin>:BokkyPooBahsAutonomousRefundathonFacility' of undefined
    at <anonymous>:1:38

> 
...... 
... 
...... 
......... 
............ 
............ 
............ 
............ 
............ 
............ 
............ 
............ 
......... 
...... 
... 
TypeError: Cannot access member 'new' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100370.000000000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c   100000.000000000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractStaticDetails (functions.js:131:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
RESULT: FAIL Test 1.1 Deploy BARF Contract
0
> 
RESULT:   CHECK 1. BARF Owner pays a little gas
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 1.2 Member1 buys tokens in first period when 1 BARF = 0.01 ETH"
> 
RESULT: Test 1.2 Member1 buys tokens in first period when 1 BARF = 0.01 ETH
undefined
> 
TypeError: Cannot access member 'memberBuyToken' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100370.000000000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c   100000.000000000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
RESULT:   CHECK 1. Member1 ether balance -12.54 ETH
undefined
> 
RESULT:   CHECK 2. Member1 token balance +1,254 BARF
undefined
> 
RESULT:   CHECK 3. BARF contract ether balance +12.54 ETH
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 1.3 Member1 transfers 1254 BARF to member2"
> 
RESULT: Test 1.3 Member1 transfers 1254 BARF to member2
undefined
> 
TypeError: Cannot access member 'balanceOf' of undefined
    at <anonymous>:1:20

> 
TypeError: Cannot access member 'transfer' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100370.000000000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c   100000.000000000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
RESULT:   CHECK 1. Member1 token balance -1,254 BARF
undefined
> 
RESULT:   CHECK 2. Member2 token balance +1,254 BARF
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 1.4 Member2 sells tokens in first period when 1 BARF = 0.01 ETH"
> 
RESULT: Test 1.4 Member2 sells tokens in first period when 1 BARF = 0.01 ETH
undefined
> 
TypeError: Cannot access member 'balanceOf' of undefined
    at <anonymous>:1:20

> 
TypeError: Cannot access member 'memberSellToken' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100370.000000000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c   100000.000000000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
RESULT:   CHECK 1. Member2 token balance 0 BARF
undefined
> 
RESULT:   CHECK 2. BARF contract ether balance 0 ETH
undefined
> 
RESULT:   CHECK 2. contract.amountOfEthersOwnerCanWithdraw 0 ETH
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 2.1 Member3 buys tokens in the second period when 1 BARF = 0.02 ETH"
> 
RESULT: Test 2.1 Member3 buys tokens in the second period when 1 BARF = 0.02 ETH
undefined
> 
undefined
> 
RESULT: Waiting until after 1491781440 Mon, 10 Apr 2017 09:44:00 AEST currentDate=Mon, 10 Apr 2017 09:43:10 AEST
undefined
> 
... 
undefined
> 
RESULT: Waited until after 1491781440 Mon, 10 Apr 2017 09:44:00 AEST currentDate=Mon, 10 Apr 2017 09:44:00 AEST
undefined
> 
undefined
> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100440.001060000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c    99899.998940000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
RESULT: tx21 gas=400000 gasUsed=53000 cost=0.00106 block=88 txId=0xfef6f9245f8337fa0dcdac7c43eed4798a8d4b6eca3d10d1046e28f6f501695b
undefined
> 
RESULT: PASS Test 2.1 Member3 buys tokens in the second period when 1 BARF = 0.02 ETH
1
> 
RESULT:   CHECK 1. Member3 ether balance -100 ETH
undefined
> 
RESULT:   CHECK 2. Member3 token balance +5,000 BARF
undefined
> 
RESULT:   CHECK 3. BARF contract ether balance +100 ETH
undefined
> 
RESULT:   CHECK 2. contract.amountOfEthersOwnerCanWithdraw 50 ETH
undefined
> 
RESULT: 
undefined
> 
> 
undefined
> 
"Test 2.2 Member3 approves a transfer of 2000 BARF to member2"
> 
RESULT: Test 2.2 Member3 approves a transfer of 2000 BARF to member2
undefined
> 
undefined
> 
TypeError: Cannot access member 'approve' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100440.001060000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c    99899.998940000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
RESULT:   CHECK 1. Approval event generated for 2000 BARF
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 2.3 Member2 transfer 1,000 BARF from member3"
> 
RESULT: Test 2.3 Member2 transfer 1,000 BARF from member3
undefined
> 
undefined
> 
TypeError: Cannot access member 'transferFrom' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100440.001060000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c    99899.998940000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
undefined
> 
RESULT:   CHECK 1. Member2 ether balance +1,000 ETH
undefined
> 
RESULT:   CHECK 2. Member3 token balance -1,000 BARF
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 2.4 Member2 transfer 10,000 BARF from member3 - unsuccessful"
> 
RESULT: Test 2.4 Member2 transfer 10,000 BARF from member3 - unsuccessful
undefined
> 
undefined
> 
TypeError: Cannot access member 'transferFrom' of undefined
    at <anonymous>:1:12

> 
... 
undefined
> 
RESULT: # Account                                                   EtherBalance                TokenBalance Name
RESULT: 1 0x000d1009bd8f0b1301cc5edc28ed1222a3ce671e   100440.001060000000000000        0.000000000000000000 Account #0 - Miner
RESULT: 2 0x0014060ff383c9b21c6840a3b14aab06741e5c49   100000.000000000000000000        0.000000000000000000 Account #1 - BARF Owner
RESULT: 3 0x0020017ba4c67f76c76b1af8c41821ee54f37171   100000.000000000000000000        0.000000000000000000 Account #2 - Member #1
RESULT: 4 0x0036f6addb6d64684390f55a92f0f4988266901b   100000.000000000000000000        0.000000000000000000 Account #3 - Member #2
RESULT: 5 0x004e64833635cd1056b948b57286b7c91e62731c    99899.998940000000000000        0.000000000000000000 Account #4 - Member #3
RESULT: 6 0x0055fbc1ada89056088c75eaf50400af6756ae61   100000.000000000000000000        0.000000000000000000 Account #5 - Member #4
RESULT: 7 0x006b2baf3000413d83d257086fd3434a109aa552   100000.000000000000000000        0.000000000000000000 Account #6 - Member #5
undefined
> 
TypeError: Cannot access member 'filter' of null
    at web3.js:2815:5
    at web3.js:3024:5
    at printContractDynamicDetails (functions.js:144:18)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at printTxData (functions.js:70:45)
    at <anonymous>:1:1

> 
TypeError: Cannot access member 'gas' of null
    at failIfGasEqualsGasUsed (functions.js:90:13)
    at <anonymous>:1:1

> 
RESULT:   CHECK 1. IMPORTANT - No changes
undefined
> 
RESULT: 
undefined
> 
> 
> 
undefined
> 
"Test 3.1 Member4 buys tokens in the last period when 1 BARF = 1,000,000 ETH"
> 
RESULT: Test 3.1 Member4 buys tokens in the last period when 1 BARF = 1,000,000 ETH
undefined
> 
undefined
> 
RESULT: Waiting until after 1491781560 Mon, 10 Apr 2017 09:46:00 AEST currentDate=Mon, 10 Apr 2017 09:44:18 AEST
undefined
> 
... 
